log/build_2023-11-24_16-20-38/joystick_sub/stderr.log
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py", line 188
    return angle[50:] distance[50:]
                      ^
SyntaxError: invalid syntax

